Improved code quality + documentation
TODO tests

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,14 @@
-twitter.oAuthAccessToken=1133713920160673792-9O881qs3Qufh1CBB5tIxS7cnWVnxSX
-twitter.oAuthAccessTokenSecret=yMN1ydFk02sLACoOyC3QOwew8WTzbXbp38UdxEbojSeN5
-twitter.oAuthConsumerKey=nbxHAgx2yf49MwmqAx6pdRc3e
-twitter.oAuthConsumerSecret=cCEVG8Df1LPzf8safkRafPTSSiVRevneVId9GME5w9JdfGya6Q
+twitter.oAuthConsumerKey=
+twitter.oAuthConsumerSecret=
+twitter.oAuthAccessToken=
+twitter.oAuthAccessTokenSecret=
+twitter.language=en
+
+#Twitter expects one (or more) of "follow", "track", or "locations" to be present in filter, otherwise twitter returns error.
+#leave track empty to not track anything
+twitter.track=
+twitter.locations=New York,San Francisco,Chicago
 
 fixedRateMs=2000
-
-
-#leave track empty to not track anything
-track=
-twitter.language=en
 
 #logging.level.root=DEBUG
