--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,9 +4,10 @@ twitter.oAuthAccessToken=
 twitter.oAuthAccessTokenSecret=
 twitter.language=en
 
-#Twitter expects one (or more) of "follow", "track", or "locations" to be present in filter, otherwise twitter returns error.
+#Twitter expects one (or more) of parameters "follow", "track", or "locations" to be present in filter, otherwise Twitter returns error.
 #leave track empty to not track anything
 twitter.track=
+#leave locations empty to not filter by locations
 twitter.locations=New York,San Francisco,Chicago
 
 fixedRateMs=2000
